# digibill

./: README.md
src/: CMakeLists.txt  Makefile  TextDetector  TextDetector.cpp
src/clustering/: ccore.mk  clustering.mk  makefile
src/clustering/src/: definitions.hpp  test.cpp  utils.hpp
src/clustering/src/cluster/: optics.cpp
src/clustering/src/container/: kdtree.cpp
src/data-generator/: decodings.txt  encodings.txt  fetchUPCCorpus.py  generateImages.py  params.conf  processRawUPCData.py  processed-corpus.txt  utils.py
src/network-trainer/: model.py  train.py  utils.py
src/word-detector/: CMakeCache.txt  TextDetector  cmake_install.cmake
